# cunit-testing

./: .gitignore  CMakeLists.txt  README.md  build.sh  tests.c
src/: avg_and_max.c  avg_and_max.h
